security/container-security-policies.yaml
# Container Security Policies and Vulnerability Scanning
# Enterprise-grade container security with admission controllers and scanning

---
# Gatekeeper ConstraintTemplate for container security
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: containerrequiredsecurity
spec:
  crd:
    spec:
      names:
        kind: ContainerRequiredSecurity
      validation:
        openAPIV3Schema:
          type: object
          properties:
            requiredSecurityContext:
              type: object
              properties:
                runAsNonRoot:
                  type: boolean
                readOnlyRootFilesystem:
                  type: boolean
                allowPrivilegeEscalation:
                  type: boolean
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package containerrequiredsecurity

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.securityContext.runAsNonRoot
          msg := sprintf("Container %v must run as non-root user", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.securityContext.readOnlyRootFilesystem
          msg := sprintf("Container %v must have read-only root filesystem", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.allowPrivilegeEscalation
          msg := sprintf("Container %v must not allow privilege escalation", [container.name])
        }

---
# ConstraintTemplate for required resource limits
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: containerresourcelimits
spec:
  crd:
    spec:
      names:
        kind: ContainerResourceLimits
      validation:
        openAPIV3Schema:
          type: object
          properties:
            maxCpu:
              type: string
            maxMemory:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package containerresourcelimits

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.resources.limits.cpu
          msg := sprintf("Container %v must have CPU limits", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.resources.limits.memory
          msg := sprintf("Container %v must have memory limits", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          cpu_limit := container.resources.limits.cpu
          cpu_limit_int := to_number(trim_suffix(cpu_limit, "m"))
          cpu_limit_int > 2000  # 2 CPU cores
          msg := sprintf("Container %v CPU limit %v exceeds maximum of 2000m", [container.name, cpu_limit])
        }

---
# ConstraintTemplate for image security
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: containerimagesecurity
spec:
  crd:
    spec:
      names:
        kind: ContainerImageSecurity
      validation:
        openAPIV3Schema:
          type: object
          properties:
            allowedRegistries:
              type: array
              items:
                type: string
            prohibitedTags:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package containerimagesecurity

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          image := container.image
          not starts_with(image, input.parameters.allowedRegistries[_])
          msg := sprintf("Container %v uses unauthorized registry: %v", [container.name, image])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          image := container.image
          endswith(image, input.parameters.prohibitedTags[_])
          msg := sprintf("Container %v uses prohibited tag: %v", [container.name, image])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          image := container.image
          endswith(image, ":latest")
          msg := sprintf("Container %v must not use 'latest' tag: %v", [container.name, image])
        }
